[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
base64-url = "1.4.13"
bcrypt = "0.13.0"
itsdangerous = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
